@@ -76,6 +76,7 @@ public:
   int MacroGetProperty(CString name, double &value);
   void WriteIndexedInts(const char *keyword, int *values, int numVal);
   void WriteIndexedFloats(const char *keyword, float *values, int numVal);
+  int CheckForByteOrderMark(CString & item0, const char * tag, CString & filename, const char *descrip);
 };
 
 #endif // !defined(AFX_PARAMETERIO_H__A83A6CC0_40E1_4BDF_8FEF_53898673E513__INCLUDED_)
